Mejoras a Config de Webpack y Babel

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <title>Búsqueda de Productos</title>
 </head>
 <body>
-<script src="/app/bundle.js"></script>
+<div id="app"></div>
 </body>
 </html>
